make-a-wish-salesforce/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Hobby__c</fullName>
        <description>It will capture the wish child favorite hobby details</description>
        <label>Hobby</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_Make_A_Wish__c</fullName>
        <description>it holds the details of the different ways, in which the person who came to know about the make a wish</description>
        <label>How Did You Hear About Make-A-Wish?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aware of a wish family who experienced a wish</fullName>
                </value>
                <value>
                    <fullName>Civic organization</fullName>
                </value>
                <value>
                    <fullName>College / University</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Media / Public Relations</fullName>
                </value>
                <value>
                    <fullName>Other, please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_know_MAWA_Other_Notes__c</fullName>
        <description>Volunteer can enter MAWA details and how they came to know about MAWA.</description>
        <label>How Did You Know MAWA (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_10_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the ICD-10 code.</description>
        <label>Primary ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICD_Given_By_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to hold the ICD given by referrer</description>
        <label>ICD Given By Referrer</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (ICD Given By Referrer)</relationshipLabel>
        <relationshipName>Contacts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_m_on_LinkedIn__c</fullName>
        <description>This Field is used to indicate weather the user have LinkedIn account or not.</description>
        <label>I’m On LinkedIn</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_Enter_Org_Name_Wish_Date_it_was__c</fullName>
        <description>If already wish granted, please indicate the organization&apos;s name, the wish,
and the date it was or will be granted.</description>
        <inlineHelpText>If already wish granted, please indicate the organization&apos;s name, the wish,
and the date it was or will be granted.</inlineHelpText>
        <label>If Yes, Enter Org.Name,Wish&amp; Date It Was</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It holds the import id.</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <description>It used to make a short note on the volunteer contact</description>
        <label>Important Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactivation_Date__c</fullName>
        <label>Inactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inquiry_Referral_Method__c</fullName>
        <description>This field is used to capture the inquiry method type.</description>
        <label>Inquiry/Referral Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_involved_with_Make_A_Wish__c</fullName>
        <description>It holds whether the user is interested and would be involved in Make-A-Wish?</description>
        <label>Would Your Company Be Interested MAW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterviewDateSet__c</fullName>
        <description>This field will be checked when the prospective volunteer submit the interview date</description>
        <label>Hidden Interview Date Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interview Task Created</fullName>
                </value>
                <value>
                    <fullName>Interview Task Completed</fullName>
                </value>
                <value>
                    <fullName>BC Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsContactInfoUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsContactInfoUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstParentGuardian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is Hidden field is used to Identify the first Parent Guardian to sign the docusign document.</description>
        <label>Hidden IsFirstParentGuardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParentGuardian__c</fullName>
        <description>This check box is used to check parent guardian is signed or not. in docusign document.</description>
        <label>Hidden IsParentGuardian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ParentGuardian</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsRecall_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsRecall Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRejected_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsRejected Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as hidden to check the wish family contact has signed or not in the docusign document.</description>
        <label>Hidden IsSigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Family_Aware_of_Referral__c</fullName>
        <description>This field indicate the wish Child Family aware of Referral at MAWA.</description>
        <label>Is Family Aware Of Referral?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Notes__c</fullName>
        <description>It will capture information about language</description>
        <label>Language Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>It will capture the known language details it may be more than one language</description>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French and French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Continuing_Edu_Date__c</fullName>
        <description>Completed Date for most recent training</description>
        <label>Last Continuing Edu. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>It will hold the value of contact&apos;s lead created date.</description>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Mailing Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MailingAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Mailing Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>May_We_Contact_You_at_Work__c</fullName>
        <description>It will display the person contact you at work station information.</description>
        <label>May We Contact You At Work?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <description>It will capture the medical condition of the wish child</description>
        <label>Medical Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Needs__c</fullName>
        <description>It will define that wish participant requires medical needs or not.</description>
        <label>Medical Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>It will hold the value of middle name.</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movie__c</fullName>
        <description>It will capture wish child favorite movie names.</description>
        <label>Movie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_Singer__c</fullName>
        <description>It will capture wish child favorite music details.</description>
        <label>Music/Singer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyWishIsTo__c</fullName>
        <description>This field will  get the value from wish child form.</description>
        <label>My Wish Is To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>It will hold the value of nick name.</description>
        <label>Nickname</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <description>Its indicating wish child&apos;s facilitating communication</description>
        <label>Non - Verbal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Assignments__c</fullName>
        <description>It hold the number of assignments for each contact.</description>
        <label>Number Of Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_wishes_active__c</fullName>
        <description>It will capture the information, number of active case related to the each contacts</description>
        <label>Number Of Active Wishes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_wishes_granted__c</fullName>
        <description>It will capture the information about, number of granted case related with each volunteer contact</description>
        <label>Number Of Wishes Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Update_Contact_Values__c</fullName>
        <description>This field is used to trace the old and update values for the contact record</description>
        <label>Old &amp; Update Contact Values</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <description>It will indicate which level volunteer now.</description>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Orientation</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Background Check</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Other Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OtherAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Other Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Medical_Provider_Category__c</fullName>
        <description>It holds the Other Medical Provider Category value comes from the lead</description>
        <label>Other Medical Provider Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>It will capture the extra favorites of wish child</description>
        <label>Other Favorites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_diagnosis__c</fullName>
        <description>Used to hold other diagnosis values</description>
        <label>Other diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Diagnosis__c</fullName>
        <label>PR Diagnosis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <description>This field holds the name of the Parent/Guardian Name</description>
        <label>Parent/Guardian Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Guardian__c</fullName>
        <description>This field will used to store all related contact  in the relationship object record of the wish child</description>
        <label>Hidden Parent/Legal Guardian</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_A_Received__c</fullName>
        <description>This field will capture the date when the status is changed Part A Sent to Eligibility Review/Qualified</description>
        <label>Diagnosis Verification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_A_Sent__c</fullName>
        <description>This will capture the date when the lead status is changed from Referred to Part A Sent</description>
        <label>Diagnosis Verification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pet_Animal__c</fullName>
        <description>It will capture the Wish Child favorite Pet Animal details</description>
        <label>Pet/Animal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>It will hold the information about designation of employee.</description>
        <label>Position</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Name__c</fullName>
        <inlineHelpText>If this is Blank, then please update on the Update Contact Info page on the case.</inlineHelpText>
        <label>Preferred Contact: Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Number__c</fullName>
        <inlineHelpText>If this is Blank, then please update on the Update Contact Info page on the case.</inlineHelpText>
        <label>Preferred Contact: Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Relationship__c</fullName>
        <inlineHelpText>If this is Blank, then please update on the Update Contact Info page on the case.</inlineHelpText>
        <label>Preferred Contact: Relationship</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>It will capture the wish child&apos;s preferred name.</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>This field is used to store the Volunteer Contact Preferred value.</description>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>It will hold wish child Primary Address details</description>
        <label>Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis_Condition_Description__c</fullName>
        <description>Used to hold the Primary diagnosis condition description from lead record during conversion</description>
        <label>Primary Condition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Skills_Other_Notes__c</fullName>
        <description>If volunteer know any extra Professional Skills, they can note it here.</description>
        <label>Professional Skills (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Skills__c</fullName>
        <description>It will capture the professional skills information</description>
        <label>Professional Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction / Carpentry</fullName>
                </value>
                <value>
                    <fullName>Entertainment Skills</fullName>
                </value>
                <value>
                    <fullName>Graphic Design / Art Design</fullName>
                </value>
                <value>
                    <fullName>Interior Decorating</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Professional Certifications</fullName>
                </value>
                <value>
                    <fullName>Scrapbooking</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provided_additional_information__c</fullName>
        <description>Used to hold additional information provided by medical professional</description>
        <label>Provided additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <description>Provider types for medical professional contacts</description>
        <label>Medical Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Child Life Professional</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publicity_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether wish child is publicity child or not if yes we can use this child for future events</description>
        <inlineHelpText>Check this box if you feel the wish child would be a good publicity candidate.</inlineHelpText>
        <label>Publicity Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publicity_Notes__c</fullName>
        <description>This field contains the Notes of the wish kid for going public.</description>
        <label>Publicity Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publicity_OK__c</fullName>
        <description>This field is used to determine whether the Wish Child wants to go public or not.</description>
        <inlineHelpText>Publicity applies to all participants of the wish associated with this Wish Child</inlineHelpText>
        <label>Publicity OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifying_Diagnosis__c</fullName>
        <label>Qualifying Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_ICD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualifying ICD code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Qualifying ICD)</relationshipLabel>
        <relationshipName>Contacts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RE_About_Me__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE About Me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Name__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Account Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Alternate_Email__c</fullName>
        <description>NUM</description>
        <label>RE Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Alternate_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Alternate Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Birthdate__c</fullName>
        <description>BIRTH_DATE</description>
        <label>RE Birthdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Business_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Business Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Business_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City_Employer__c</fullName>
        <description>CITY</description>
        <label>RE City Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City_Referrer__c</fullName>
        <description>CITY</description>
        <label>RE City Referrer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_County__c</fullName>
        <description>COUNTY</description>
        <label>RE County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Deceased_Date__c</fullName>
        <description>DECEASED_DATE</description>
        <label>RE Deceased Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Deceased__c</fullName>
        <description>DECEASED</description>
        <label>RE Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Diagnosis_Verification_Received__c</fullName>
        <description>QUALIFIED</description>
        <label>RE Diagnosis Verification Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact_Notes__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email_Opt_Out__c</fullName>
        <description>INACTIVE, DO_NOT_CALL
|NO_EMAIL</description>
        <label>RE Email Opt Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email__c</fullName>
        <description>NUM</description>
        <label>RE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Phone__c</fullName>
        <description>EMERGENCY_PHONE</description>
        <label>RE Emergency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Relationship__c</fullName>
        <description>EMERGENCY_RELATION</description>
        <label>RE Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact__c</fullName>
        <description>EMERGENCY_NAME</description>
        <label>RE Emergency Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Employer__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Gender__c</fullName>
        <description>SEX</description>
        <label>RE Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Home_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Home Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_ICD_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE ICD Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_I_m_on_LinkedIn__c</fullName>
        <description>NUM</description>
        <label>RE Iâ€™m on LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>&quot;MAWWISHDATAID, IMPORTID
|ID, IMPORT_ID&quot;</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Language_Notes__c</fullName>
        <description>&quot;PRIMARY_LANGUAGE
|DESCRIPTION &amp; SKILL_LEVEL&quot;</description>
        <label>RE Language Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Language__c</fullName>
        <description>&quot;PRIMARY_LANGUAGE
|DESCRIPTION &amp; SKILL_LEVEL&quot;</description>
        <label>RE Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Lead_Created_Date__c</fullName>
        <description>DATEADDED</description>
        <label>RE Lead Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>